# one-row-stat-linux

./: CMakeLists.txt  build.sh  readme.md  run.sh
include/: output.h  proc.h
lib/: output.cpp  proc.cpp  stat.cpp
sources/: onerow
src/: main.cpp
